--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -66,3 +66,15 @@ tr:nth-child(even) {
 tfoot td {
   font-size: .8rem
 }
+
+button {
+  border: none;
+  border-radius: 5px;
+  background: #ba5626;
+  font-size: 1rem;
+  color: white;
+  width: 105px;
+  margin: 0 10px;
+  padding: 5px 0;
+  cursor: pointer;
+}
