--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,7 +1,10 @@
-html {
+html, body {
   margin: 0;
+  padding: 0;
   font-size: 16px;
   box-sizing: border-box;
+  min-height: 100%;
+  position: relative;
 }
 
 section {
