--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -77,7 +77,8 @@ button {
   font-size: 1rem;
   color: white;
   width: 105px;
-  margin: 0 10px;
+  margin: 5px;
   padding: 5px 0;
   cursor: pointer;
 }
+
