--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -18,6 +18,10 @@ p, pre {
   padding: 0 10px;
 }
 
+pre {
+  padding: 0;
+}
+
 p.foot-note {
   font-size: 1rem;
 }
@@ -31,7 +35,7 @@ p.foot-note {
 }
 
 pre.pali-indented {
-  margin: 0 50px 0;
+  /* margin: 0 50px 0; */
 }
 
 span.ref-footnote {
