--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,10 +5,46 @@ html, body {
   box-sizing: border-box;
   min-height: 100%;
   position: relative;
+  background-color: #F6F2ED;
 }
 
 section {
   padding: 0 0 10px 0;
+}
+
+h1 {
+  font-size: 3rem;
+}
+
+h2 {
+  font-size: 2.6rem;
+  margin-top: 3rem;
+}
+
+h3 {
+  font-size: 2rem;
+  margin-top: 3rem;
+}
+
+h4 {
+  font-size: 1.44rem;
+}
+
+h5 {
+  font-size: 1.15rem;
+}
+
+h6 {
+  font-size: 0.96rem;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  text-align: center;
+  margin: 15px 0;
+}
+
+a {
+  color: #BD5F33;
 }
 
 p, pre {
@@ -18,8 +54,9 @@ p, pre {
   padding: 0 10px;
 }
 
-p.english-para {
-  text-indent: 20px
+p {
+  text-indent: 20px;
+  line-height: 125%;
 }
 
 pre {
