--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -17,12 +17,12 @@ section {
 }
 
 h1 {
-  font-size: 3rem;
+  font-size: 2.8rem;
   margin-top: 3rem;
 }
 
 h2 {
-  font-size: 2.6rem;
+  font-size: 2.4rem;
   margin-top: 3rem;
 }
 
@@ -50,6 +50,11 @@ h1, h2, h3, h4, h5, h6 {
 
 a {
   color: #BD5F33;
+}
+
+hr {
+  width: 85%;
+  border: 1px solid black;
 }
 
 p, pre {
