--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,7 +6,7 @@ html, body {
   min-height: 100%;
   position: relative;
   background-color: #f9f9f9;
- font-family: 'Noto Serif', serif;
+  font-family: 'Noto Serif', serif;
   color: #222;
 }
 
@@ -59,7 +59,11 @@ h1, h2, h3, h4, h5, h6 {
 
 
 a {
-  color: #BD5F33;
+	color: #2c8898;
+}
+	
+a:hover, a:active {
+  color: #4D4612;
 }
 
 hr {
@@ -68,7 +72,7 @@ hr {
   border: 1px solid black;
 }
 
-p, pre, blockquote {
+p, blockquote {
   text-align: justify;
   font-family: "Times";
   font-size: 1.2rem;
@@ -78,12 +82,47 @@ p, pre, blockquote {
 }
 
 pre {
-  margin-bottom: -20px;
+  text-align: justify;
+  font-family: "Times";
+  font-size: 1.2rem;
+  padding: 0 10px;
+  line-height: 125%;
+  margin: 5px 0 -20px 0;
   white-space: pre-wrap; /* css-3 */
   white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
   white-space: -pre-wrap; /* Opera 4-6 */
   white-space: -o-pre-wrap; /* Opera 7 */
   word-wrap: break-word; /* Internet Explorer 5.5+ */
+}
+
+.center-text {
+	text-align: center
+}
+	
+.intro-content-container {
+	margin: 0 3vw;
+}
+
+.center-in-cont {
+	display: flex;
+	justify-content: center;
+}
+	
+.center-verses {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+	
+.attribution {
+	text-align: right;
+	font-size: .8rem;
+	margin-bottom: 20px;
+}
+	
+.justified-indented-quote {
+	margin: 10px 12%;
+	text-align: justify;
 }
 
 .pali {
@@ -95,9 +134,9 @@ pre {
   text-indent: 40px;
  }
  
- .indentx2 {
+.indentx2 {
  text-indent: 80px;
- }
+}
 
 .footnotes {
 	width: 85%;
@@ -119,11 +158,6 @@ pre {
 sup { 
 	font-size: 12px;
 	margin: 0 2px 0 2px;
-}
-
-.pali-content-container :target,
-.intro-content-container :target {
-  background-color: cornsilk;
 }
 
 button {
