Removed unnecessary components and reduced down to just ETP content; added table CSS back for Compare comp

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -138,6 +138,39 @@ pre {
  text-indent: 80px;
 }
 
+
+table {
+  border-collapse: collapse;
+  box-sizing: border-box;
+  text-indent: initial;
+  border-spacing: 2px;
+  border-color: grey;
+  width: 100%;
+  margin: .5rem 0 1rem;
+}
+
+td, th {
+  padding: 1rem;
+  border: 1px solid gray;
+  font-size: 1.1rem
+}
+
+th {
+  text-align: center;
+  background: hsl(206, 51%, 84%);
+  font-weight: 700;
+}
+
+tr:nth-child(even) {
+  background: hsl(206, 51%, 95%);
+}
+
+tfoot td {
+  font-size: .8rem
+}
+
+
+
 .footnotes {
 	width: 85%;
 	margin: 0;
